--- a/client/css/write-movies.css
+++ b/client/css/write-movies.css
@@ -29,7 +29,7 @@ input {
     margin-top: 1.5em;
 }
 
-#success-added {
+#successAdded {
     background-color: rgb(186, 250, 186);
     border: 1px solid green;
     float: left;
@@ -37,7 +37,6 @@ input {
     font-weight: bold;
     line-height: 1.5em;
     margin: 30px 0;
-    opacity: 0;
     padding: 1em 2em;
     width: 30em;
 }
